# fedora-packager

./: .gitignore  .hgignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.status  configure  configure.ac  configure.in  fedora-packager-0.2.0.tar.bz2  fedora-packager-0.3.0.tar.bz2  fedora-packager.spec
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
scripts/: fedora-cvs  fedora-packager-setup.sh
src/: cpancheck.sh  fedora-cert.py  fedora-cvs.py  fedora-getsvn  fedora-hosted.py  fedora-packager-setup.py  fedora-packager-setup.sh  fedora-qa  fedoradev-pkgowners  fedpkg.py  getPackages.sh  isutf8.sh  rpmbuild-md5  secondary-koji
src/fedora_cert/: __init__.py
src/fedpkg/: __init__.py
src/lib/: fedora-cert.py
src/pyfedpkg/: __init__.py
